# src/co/icreated/portal/controller/PaymentController.java
@@ -4,27 +4,27 @@ import java.math.BigDecimal;
 import java.util.List;
 import java.util.logging.Level;
 
+import javax.validation.Valid;
+
 import org.adempiere.exceptions.AdempiereException;
 import org.compiere.util.CLogger;
 import org.compiere.util.Env;
 import org.compiere.util.Trx;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import co.icreated.portal.bean.CreditCardDto;
-import co.icreated.portal.bean.SessionUser;
+import co.icreated.portal.api.PaymentsApi;
+import co.icreated.portal.model.CreditCardDto;
 import co.icreated.portal.model.OpenItemDto;
 import co.icreated.portal.model.PaymentDto;
+import co.icreated.portal.security.Authenticated;
 import co.icreated.portal.service.InvoiceService;
 import co.icreated.portal.service.PaymentService;
 
 @RestController
-@RequestMapping(path = "/payments")
-public class PaymentController {
+public class PaymentController implements PaymentsApi, Authenticated {
 
   CLogger log = CLogger.getCLogger(PaymentController.class);
 
@@ -42,10 +42,11 @@ public class PaymentController {
    * @param sessionUser
    * @return
    */
-  @GetMapping
-  public List<PaymentDto> getInvoices(@AuthenticationPrincipal SessionUser sessionUser) {
+  public ResponseEntity<List<PaymentDto>> getPayments() {
 
-    return paymentService.findInvoicePayments(sessionUser.getPartnerId());
+    List<PaymentDto> payments =
+        paymentService.findBPartnerPayments(getSessionUser().getPartnerId());
+    return ResponseEntity.ok(payments);
   }
 
 
@@ -57,15 +58,14 @@ public class PaymentController {
    * @param sessionUser
    * @param creditCard
    */
-  @PostMapping("/pay")
-  public void postPaymentCreditCard(@AuthenticationPrincipal SessionUser sessionUser,
-      @RequestBody CreditCardDto creditCard) {
+  @Override
+  public ResponseEntity<Void> createPayment(@Valid CreditCardDto creditCardDto) {
 
-    List<OpenItemDto> openItems = invoiceService.findOpenItems(sessionUser.getPartnerId());
+    List<OpenItemDto> openItems = invoiceService.findOpenItems(getSessionUser().getPartnerId());
     BigDecimal openTotal = openItems.stream().map(OpenItemDto::getOpenAmt).reduce(Env.ZERO,
         (subtotal, value) -> subtotal.add(value));
 
-    boolean isTotalEqual = openTotal.compareTo(creditCard.getAmt()) == 0;
+    boolean isTotalEqual = openTotal.compareTo(creditCardDto.getPaymentAmount()) == 0;
     if (!isTotalEqual) {
       throw new AdempiereException("Totals from backend & frontend not are equal");
     }
@@ -76,18 +76,23 @@ public class PaymentController {
     Trx trx = Trx.get(trxName, true);
 
     try {
-      paymentService.createPayments(sessionUser, openItems, creditCard, trxName);
+      paymentService.createPayments(getSessionUser(), openItems, creditCardDto, trxName);
       trx.commit();
       log.log(Level.INFO, "Transaction Payments Completed");
+      return ResponseEntity.ok().build();
     } catch (Exception e) {
       log.log(Level.WARNING, "Not proceed. Transaction Payments Aborted");
       trx.rollback();
+      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
     } finally {
       trx.close();
       trx = null;
     }
 
 
+
   }
+
+
 
 }
